kubernetes/apps/default/website/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
  labels:
    app.kubernetes.io/name: website
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: website
    app.kubernetes.io/instance: website
    app.kubernetes.io/name: website
